--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ defusedxml==0.6.0
 entrypoints==0.3
 Flask==1.1.1
 Flask-Compress==1.4.0
+flask-cors==3.0.8
 future==0.18.2
 gunicorn==20.0.4
 httplib2==0.17.3
