--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+appdirs==1.4.3
 asgiref==3.2.3
+astroid==2.4.0
 attrs==19.1.0
 automium==0.2.6
 automium-web==0.1.1
+autopep8==1.5.2
 backcall==0.1.0
-bleach==3.1.4
+bleach==3.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
 Click==7.0
@@ -14,52 +17,67 @@ connexion==2.7.0
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
+distlib==0.3.0
 entrypoints==0.3
+filelock==3.0.12
 Flask==1.1.1
 Flask-Compress==1.4.0
-flask-cors==3.0.8
+Flask-Cors==3.0.8
 future==0.18.2
 gunicorn==20.0.4
-httplib2==0.18.0
+httplib2==0.17.3
 idna==2.9
 inflection==0.4.0
 instagram-private-api==1.6.0.0
 instaloader==4.3.2
 ipython==7.7.0
 ipython-genutils==0.2.0
+isort==4.3.21
 itsdangerous==1.1.0
 jedi==0.14.1
 Jinja2==2.10.1
 joblib==0.14.1
 jsonschema==3.0.2
+jupyter-core==4.6.3
 kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
 legacy==0.1.6
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.5.0
 nbformat==4.4.0
+numpy==1.18.4
 openapi-spec-validator==0.2.8
 pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.1
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
+pycodestyle==2.5.0
 pyglet==1.5.0
 Pygments==2.4.2
+pylint==2.5.0
 pyparsing==2.4.6
 pyrsistent==0.15.4
 python-dateutil==2.8.0
 pytz==2019.3
+pywin32==227
 PyYAML==5.3.1
+redis==3.5.2
 requests==2.23.0
 retrying==1.3.3
+rq==1.4.2
 simplejson==3.17.0
 six==1.12.0
 swagger-ui-bundle==0.0.6
 testpath==0.4.2
+toml==0.10.0
 traitlets==4.3.2
 urllib3==1.25.9
 views==0.3
+virtualenv==20.0.18
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.16.0
+wrapt==1.12.1
