--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,16 @@ cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 distlib==0.3.0
+dnspython==1.16.0
 entrypoints==0.3
+eventlet==0.25.2
 filelock==3.0.12
 Flask==1.1.1
 Flask-Compress==1.4.0
 Flask-Cors==3.0.8
+Flask-SocketIO==4.3.0
 future==0.18.2
+greenlet==0.4.15
 gunicorn==20.0.4
 httplib2==0.17.3
 idna==2.9
@@ -45,6 +49,7 @@ legacy==0.1.6
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
+monotonic==1.5
 nbconvert==5.5.0
 nbformat==4.4.0
 numpy==1.18.4
@@ -61,6 +66,8 @@ pylint==2.5.0
 pyparsing==2.4.6
 pyrsistent==0.15.4
 python-dateutil==2.8.0
+python-engineio==3.13.0
+python-socketio==4.6.0
 pytz==2019.3
 PyYAML==5.3.1
 redis==3.5.2
